Oops letter spacing fixed for captions (properly this time)

--- a/style.scss
+++ b/style.scss
@@ -618,7 +618,7 @@ border-radius: 0;
 				margin: 0;
 				line-height: 1.6em;
 				text-transform: none;
-				letter-spacing: 1em;
+				letter-spacing: normal;
 				font-size: 1.1em;
 				padding: 0;
 			}
